src/objects/CRM_Attachment_Event__e.object
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce to attach document to an entity in Salesforce.</description>
    <fields>
        <fullName>author__c</fullName>
        <label>author</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification__c</fullName>
        <label>classification</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>content__c</fullName>
        <label>content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>entityType__c</fullName>
        <label>entityType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventDate__c</fullName>
        <label>eventDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSourceID__c</fullName>
        <label>eventSourceID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSource__c</fullName>
        <label>eventSource</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operation__c</fullName>
        <label>operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentSystemOfOriginID__c</fullName>
        <label>parentSystemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referenceNumberName__c</fullName>
        <label>referenceNumberName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referenceNumberValue__c</fullName>
        <label>referenceNumberValue</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOriginID__c</fullName>
        <label>systemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOrigin__c</fullName>
        <label>systemOfOrigin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CRM Attachment Event - In</label>
    <pluralLabel>CRM Attachment Events - In</pluralLabel>
</CustomObject>